# Sequence2Sequence-Transformer-Translation

./: README.md  pyproject.toml  requirements.txt  results.txt
sagemaker/: batch_transform.py  deploy_endpoint.py  inference.py  launch_training.py  test_invoke.py  train_sagemaker.py
src/: __init__.py  config.py  data.py  metrics.py  model.py  predict.py  train.py
